# DENOPTIM

./: .classpath  .classpath_w_src  .gitignore  .project  CHANGELOG.md  CONTRIBUTING.md  COPYING  README  README.md  _a_p_class_8java.html  _a_p_class_8java.js  _a_p_class_8java_source.html  _a_p_class_test_8java.html  _a_p_class_test_8java.js  _a_p_class_test_8java_source.html  _a_p_map_finder_8java.html  _a_p_map_finder_8java.js  _a_p_map_finder_8java_source.html  _a_p_map_finder_test_8java.html  _a_p_map_finder_test_8java.js  _a_p_map_finder_test_8java_source.html  _a_p_mapping_8java.html  _a_p_mapping_8java.js  _a_p_mapping_8java_source.html  _a_p_tree_map_8java.html  _a_p_tree_map_8java.js  _a_p_tree_map_8java_source.html  _atom_organizer_8java.html  _atom_organizer_8java.js  _atom_organizer_8java_source.html  _attachment_point_8java.html  _attachment_point_8java.js  _attachment_point_8java_source.html  _attachment_point_comparator_8java.html  _attachment_point_comparator_8java.js  _attachment_point_comparator_8java_source.html  _attachment_point_query_8java.html  _attachment_point_query_8java.js  _attachment_point_query_8java_source.html  _attachment_point_query_test_8java.html  (+10795 more)
conda/: bld.bat  build.sh  build_local_pkg_for_testing.sh  environment.yml  meta.yaml
contrib/: README  README.md  SetupBRICS
doc/: .gitignore  CONTRIBUTIONS  DENOPTIM_MANUAL.odt  Doxyfile  DoxygenLayout.xml  GUIDELINES_DRAFT  README.md  TODO  conf.py  index.rst  (+6 more)
src/main/python/: .gitignore  pyproject.toml  setup.cfg  setup.py
src/main/python/src/denoptim/: ScoringServer.py  __init__.py
(+2040 files in other folders)
